# change_case

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/change_case/: __init__.py  expressions.py  skeleton.py
tests/: conftest.py  test_skeleton.py
